correcion de html

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <header>
     <nav>
       <h1>ANGIE PAOLA SUAREZ</h1>
-       <!-- Botón hamburguesa (solo móvil) -->
-  <div class="hamburguesa">
+       
+ <div class="hamburguesa" id="menu-btn">
       ☰
   </div>
 
-      <!-- Menú normal -->
-  <ul class="menu">
+      <!-- Menú -->
+      <ul class="menu" id="menu">
         <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#sobre-mi">Sobre mí</a></li>
+        <li><a href="#objetivo">objetivo</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
